--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,7 @@ apply plugin: 'application'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'maven'
 
-group 'ru.bmtsu'
-mainClassName = 'ru.bmtsu.Application'
+mainClassName = 'ru.bmtsu.warrantly.Application'
 
 repositories {
     mavenCentral()
