--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile group: 'org.mockito', name:'mockito-all', version: '1.9.5'
     compile group: 'javax.xml.bind', name:'jaxb-api', version: '2.3.1'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.3.3.RELEASE'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
